tests/invalidTest/typeConvert/test_3.q
# EXPECT type cannot be converted
def uint16 test(){

  uint64 var1          #assign & constant num
  var1 = -6
  return 0
}

